--- a/html-pages/accessibility.html
+++ b/html-pages/accessibility.html
@@ -7,14 +7,14 @@
         <meta name="robots" content="index, follow">
         <meta property="og:url" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/html-pages/accessibility.html" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Accessibilité - La Chouette Agence - Web Design Lyon" />
-        <meta property="og:description" content="Page Accessibilité - La chouette Agence est une entreprise de web design basée à Lyon" />
+        <meta property="og:title" content="Accessibilité - La Chouette Agence -Web Design à Lyon !" />
+        <meta property="og:description" content="Page Accessibilité - La chouette Agence est une entreprise de web design basée à Lyon. Nous vous accompagnons pour tous vos projets numériques, contactez-nous! " />
         <meta property="og:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
         <meta name="twitter:card" content="website" />
         <meta name="twitter:site" content="@lachouetteagence" />
         <meta name="twitter:creator" content="@lachouetteagence" />
-        <meta name="twitter:title" content="Accessibilité - La Chouette Agence - Web Design Lyon" />
-        <meta name="twitter:description" content="Page Accessibilité - La chouette Agence est une entreprise de web design basée à Lyon" />
+        <meta name="twitter:title" content="Accessibilité - La Chouette Agence -Web Design à Lyon !" />
+        <meta name="twitter:description" content="Page Accessibilité - La chouette Agence est une entreprise de web design basée à Lyon. Nous vous accompagnons pour tous vos projets numériques, contactez-nous! " />
         <meta name="twitter:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
         <link rel="canonical" href="https://lulubaroy.github.io/La_Chouette_Agence_SEO/html-pages/accessibility.html">
         <link rel="manifest" href="../manifest.webmanifest.json">
@@ -23,8 +23,8 @@
         <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
         <link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.css">
-        <title>Accessibilité - La Chouette Agence - Web Design Lyon</title>
-        <meta name="description" content="Page Accessibilité - La chouette Agence est une entreprise de web design basée à Lyon">
+        <title>Accessibilité - La Chouette Agence -Web Design à Lyon !</title>
+        <meta name="description" content="Page Accessibilité - La chouette Agence est une entreprise de web design basée à Lyon. Nous vous accompagnons pour tous vos projets numériques, contactez-nous! ">
     </head>
     <body>
         <main class="page-container accessibility text-center">
@@ -33,7 +33,7 @@
                     <nav class="navbar row">
                         <div class="navbar-header">
                             <a class="navbar-brand logo_header" aria-label="Retour page accueil" href="../index.html" tabindex="0">
-                                <img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence" title="Logo La Chouette Agence"/>
+                                <img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Entreprise web design à Lyon" title="Logo La Chouette Agence"/>
                             </a>
 
                         </div>
