--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -7,14 +7,14 @@
 		<meta name="robots" content="index, follow">
 		<meta property="og:url" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Contacts - La Chouette Agence - Web Design à Lyon" />
-		<meta property="og:description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, nous sommes une entreprise de Web Design basée à Lyon !" />
+		<meta property="og:title" content="Contacts La Chouette Agence -Entreprise Web Design Lyon" />
+		<meta property="og:description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, une entreprise de Web Design basée à Lyon prête à répondre à vos besoins !" />
 		<meta property="og:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
 		<meta name="twitter:card" content="website" />
 		<meta name="twitter:site" content="@lachouetteagence" />
 		<meta name="twitter:creator" content="@lachouetteagence" />
-		<meta name="twitter:title" content="Contacts - La Chouette Agence - Web Design à Lyon" />
-		<meta name="twitter:description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, nous sommes une entreprise de Web Design basée à Lyon !" />
+		<meta name="twitter:title" content="Contacts La Chouette Agence -Entreprise Web Design Lyon" />
+		<meta name="twitter:description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, une entreprise de Web Design basée à Lyon prête à répondre à vos besoins !" />
 		<meta name="twitter:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
 		<link rel="manifest" href="../manifest.webmanifest.json">
 		<link rel="canonical" href="https://lulubaroy.github.io/La_Chouette_Agence_SEO/html-pages/contacts.html">
@@ -24,8 +24,8 @@
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/et-line.css">
-		<title>Contacts - La Chouette Agence - Web Design à Lyon</title>
-		<meta name="description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, nous sommes une entreprise de Web Design basée à Lyon !">
+		<title>Contacts La Chouette Agence -Entreprise Web Design Lyon</title>
+		<meta name="description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, une entreprise de Web Design basée à Lyon prête à répondre à vos besoins !">
 	</head>
 	<body>
 		<!-- Principal container -->
@@ -36,7 +36,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand logo_header" aria-label="Retour page accueil" href="../index.html" tabindex="0">
-								<img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence" title="Logo La Chouette Agence"/>
+								<img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Entreprise web design à Lyon" title="Logo La Chouette Agence"/>
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span>
