--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<meta property="og:url" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="La Chouette Agence - Web Design à Lyon" />
-		<meta property="og:description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet" />
+		<meta property="og:description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet. Contactez-nous vite !!" />
 		<meta property="og:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
 		<meta name="twitter:card" content="website" />
 		<meta name="twitter:site" content="@lachouetteagence" />
 		<meta name="twitter:creator" content="@lachouetteagence" />
 		<meta name="twitter:title" content="La Chouette Agence - Web Design à Lyon" />
-		<meta name="twitter:description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet" />
+		<meta name="twitter:description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet. Contactez-nous vite !!" />
 		<meta name="twitter:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
 		<link rel="canonical" href="https://lulubaroy.github.io/La_Chouette_Agence_SEO/">
 		<link rel="manifest" href="manifest.webmanifest.json">
@@ -24,8 +24,8 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/et-line.css">
-		<title>La Chouette Agence - Web Design à Lyon</title>
-		<meta name="description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet">
+		<title>La Chouette Agence - Entreprise de Web Design à Lyon !!</title>
+		<meta name="description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet. Contactez-nous vite !!">
 	</head>
 	<body>
 		<!-- Principal container -->
@@ -36,7 +36,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand logo_header" aria-label="Retour page d'accueil" href="index.html" tabindex="0">
-								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Accueil" title="Logo La Chouette Agence" aria-label="Accueil"/>
+								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Entreprise web design à Lyon" title="Logo La Chouette Agence" aria-label="Accueil"/>
 							</a>
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span>
@@ -66,7 +66,7 @@
 			<section role="banner" class="bloc bg-banniere bg-t-edge b-parallax" id="banner_block">
 					<div class="bloc-lg row">
 						<div class="col-sm-12 text-center" id="title_banner">
-							<img src="assets/img/logo.png" class="center-block" alt="Logo La chouette agence" title="Logo Principal la Chouette Agence" id="logo_banner"/>
+							<img src="assets/img/logo.png" class="center-block" alt="Logo principal La chouette agence - Entreprise web design à Lyon" title="Logo Principal la Chouette Agence" id="logo_banner"/>
 							<h1 title="La Chouette Agence">
 								<span>La chouette agence.</span>
 							</h1>
@@ -156,7 +156,7 @@
 					<section class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6 text-center">
 							<a href="#" aria-label="Animation Portfolio de la chouette agence" data-lightbox="assets/img/Site-web-journal.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-								<img src="assets/img/Site-web-journal.jpg" alt="Site web journal" title="Site web journal" class="img-responsive portfolio-thumb" />
+								<img src="assets/img/Site-web-journal.jpg" alt="Refonte du site web d'un journal local" title="Refonte du site web d'un journal local" class="img-responsive portfolio-thumb" />
 							</a>
 							<h3 class="mg-md">
 								Refonte d'un site web pour un journal local
@@ -167,7 +167,7 @@
 						</div>
 						<div class="col-sm-6 text-center">
 							<a href="#" aria-label="Animation Portfolio de la chouette agence" data-lightbox="assets/img/Site-web-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-								<img src="assets/img/Site-web-photographe.jpg" title="Site web pour photographe" class="img-responsive portfolio-thumb" alt="Site web pour photographes" />
+								<img src="assets/img/Site-web-photographe.jpg" title="Création d'un site web pour photographes" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
 							</a>
 							<h3 class="mg-md">
 								Création d'un site web pour photographes
@@ -180,7 +180,7 @@
 					<section class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6 text-center">
 							<a href="#" aria-label="Animation Portfolio de la chouette agence" data-lightbox="assets/img/Site-web-voyageur.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-								<img src="assets/img/Site-web-voyageur.png" title="Site web pour voyageur" class="img-responsive portfolio-thumb" alt="Site web pour voyageur"/>
+								<img src="assets/img/Site-web-voyageur.png" title="Création d'un site internet pour un voyageur" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur"/>
 							</a>
 							<h3 class="mg-md">
 								Création d'un site internet pour un voyageur
@@ -191,7 +191,7 @@
 						</div>
 						<div class="col-sm-6 text-center">
 							<a href="#" aria-label="Animation Portfolio de la chouette agence" data-lightbox="assets/img/Site-agence-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-								<img src="assets/img/Site-agence-mariage.jpg" title="Site agence de mariage" class="img-responsive portfolio-thumb" alt="Site agence de mariage" />
+								<img src="assets/img/Site-agence-mariage.jpg" title="Conception d'un site pour une agence de mariage" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage" />
 							</a>
 							<h3 class="mg-md">
 								Conception d'un site pour une agence de mariage
