--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<a href="html-pages/contacts.html" aria-label="Accès page Contact La Chouette Agence" class="tab_focus1" accesskey="c">Contacts</a>
 								</li>
 								<li>
-									<a href="html-pages/accessibility.html" aria-label="Accès page Accessibilité La Chouette Agence" class="tab_focus1" accesskey="a">Accessibilité</a>
+									<a href="html-pages/accessibility.html" aria-label="Accès page Accessibilité La Chouette Agence" class="tab_focus1" accesskey="s">Accessibilité</a>
 								</li>
 							</ul>
 						</div>
