--- a/html-pages/accessibility.html
+++ b/html-pages/accessibility.html
@@ -67,7 +67,7 @@
                         <strong>c Contacts</strong>
                     </li>
                     <li>
-                        <strong>a Accessibilité</strong>
+                        <strong>s Accessibilité</strong>
                     </li>
                 </ul>
                 <p>Les ACCESSKEYS, ou RACCOURCIS CLAVIER, permettent de parcourir les pages web en n'utilisant que le clavier.<br>
