--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -54,7 +54,7 @@
 									<a aria-label="Contacts - La Chouette Agence" class="tab_focus1" href="contacts.html" accesskey="c">Contacts</a>
 								</li>
 								<li>
-									<a href="accessibility.html" aria-label="Accès page Accessibilité La Chouette Agence" class="tab_focus1" accesskey="a">Accessibilité</a>
+									<a href="accessibility.html" aria-label="Accès page Accessibilité La Chouette Agence" class="tab_focus1" accesskey="s">Accessibilité</a>
 								</li>
 							</ul>
 						</div>
