--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand logo_header" aria-label="Retour page d'accueil" href="index.html" tabindex="0">
+							<a role="button" class="navbar-brand logo_header" aria-label="Retour page d'accueil" href="index.html" tabindex="0">
 								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Entreprise web design à Lyon" title="Logo La Chouette Agence" aria-label="Accueil"/>
 							</a>
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
