--- a/html-pages/accessibility.html
+++ b/html-pages/accessibility.html
@@ -32,7 +32,7 @@
                 <div class="bloc-sm">
                     <nav class="navbar row">
                         <div class="navbar-header">
-                            <a class="navbar-brand logo_header" aria-label="Retour page accueil" href="../index.html" tabindex="0">
+                            <a role="button" class="navbar-brand logo_header" aria-label="Retour page accueil" href="../index.html" tabindex="0">
                                 <img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Entreprise web design à Lyon" title="Logo La Chouette Agence"/>
                             </a>
 
